# tower-defense

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  TODO.md  TODO.txt  _vcpkg.json  readme.md  tmxtest.c  vcpkg.json  xmake.lua
.github/workflows/: ci.yml  cmake-build.yml
.zed/: debug.json
assets/: 1.tmx  2.tmx  enemies.json  frames.json  game_config.json  game_config.txt  game_info.json  ground.tsx  icon.icns  level.json  levels.json  maps.tiled-session  objects.tsx  player.json  shooters.json  space_background.fs  space_config.json  start_screen.json  targets.json  test_bullet_group.txt  test_tilemap.tmx
assets/ring_presets/: great_big_blue.txt  red_big.txt  second.txt
assets/tiled/: 1.tmx  ground.tsx  maps.tiled-session  objects.tsx
docs/: ECS_QUICK_REFERENCE.md  README_ECS.md  architecture_diagram.txt  camera_system.md  ecs_architecture.md  game_flow_inconsistencies.md  gui.md  migration_guide.md
examples/: CMakeLists.txt  camera.cpp  cubic_splines.cpp  gui.cpp  json.glaze.cpp  pursuit.cpp  scaleup.cpp  state_usage.cpp
modules/: BulletSystem.cppm  EnemyFactory.cppm  EnemySystem.cppm  EntityFactory.cppm  Game.cppm  GameScene.cppm  LevelManager.cppm  MenuScene.cppm  ShooterSelector.cppm  asset_routes.cppm  assets.cppm  bullets.cppm  components.cppm  debug.cppm  debug_gui_system.cppm  draw_system.cppm  ellipse_scene.cppm  enemy.cppm  fmt.cppm  game.cppm  game_config.cppm  game_scene.cppm  ginseng.cppm  imgui.cppm  json.cppm  menu_scene.cppm  physics_system.cppm  random.cppm  raylib_utils.cppm  say.cppm  sfml.cppm  shooter_factory.cppm  stdbridge.cppm  stdutils.cppm  stringables.cppm  target_manager.cppm  tilemap.cppm  tmx.cppm  utils.cppm
old/modules/: BulletSystem.cppm  EnemyFactory.cppm  Game.cppm  MenuScene.cppm  ShooterSelector.cppm  assets.cppm  components.cppm  sfml.cppm  shooter_factory.cppm  tilemap.cppm  tmx.cppm
old/src/: GameScene.cpp  LevelManager.cpp  ShooterSelector.cpp  assets.cpp  shooter_factory.cpp  tilemap.cpp
old/test/: EnemyFactory.test.cppm  LevelManager.test.cppm  shooter_factory.test.cppm
src/: EnemyFactory.cpp  EntityFactory.cpp  Game.cpp  GameScene.cpp  LevelManager.cpp  MenuScene.cpp  ShooterSelector.cpp  asset_routes.cppm  assets.cpp  assets.cppm  bullets.cpp  config.cpp  config.cppm  debug.cpp  debug.cppm  draw_system.cppm  ellipse_scene.cpp  ellipse_scene.cppm  event_system.cppm  game.cpp  game.cppm  game_config.cppm  game_scene.cpp  main.cpp  menu_scene.cpp  menu_scene.cppm  player_system.cppm  raylib_utils.cppm  resource_manager.cppm  shooter_factory.cpp  shooting_system.cppm  state.cppm  state_manager.cppm  system_manager.cppm  target_manager.cppm  tilemap.cpp  utils.cpp
src/components/: bullet.cppm  components.cppm  enemy.cppm  misc.cppm  movement.cppm  tags.cppm
src/gui/: button.cpp  button.cppm  container.cpp  container.cppm  gui.cppm  label.cpp  label.cppm  node.cppm  widgets.cpp  widgets.cppm
src/prefabs/: prefabs.cppm  space_background.cpp  space_background.cppm  stars_particles.cpp  stars_particles.cppm
src/scenes/: gameover.cpp  gameover.cppm  menu.cpp  menu.cppm  scenes.cppm  shooting.cpp  shooting.cppm  start_screen.cpp  start_screen.cppm
src/systems/: bullet.cpp  bullet.cppm  camera.cppm  enemy.cpp  enemy.cppm  player.cpp  player.cppm  systems.cppm  waves.cpp  waves.cppm
src/utils/: assets_cache.cpp  assets_cache.cppm
src/wey/: assets.cpp  assets.cppm  config.cppm  debug.cppm  game.cpp  game.cppm  state.cppm  state_manager.cppm  wey.cppm
test/: CMakeLists.txt  EnemyFactory.test.cppm  LevelManager.test.cppm  LevelManager_test.cpp  assets.test.cppm  assets_test.cpp  boostut.cppm  main.cpp  shooter_factory.test.cppm  ut.cppm
test/misc/: testutils.cppm  ut  ut.cppm
test/mock_game_dir/: test_cfg.json
test/modules/: tests.cppm  ut.cppm
test/src/: assets.test.cpp  bullets.test.cpp  gui-button.cpp  gui-layout-vertical.test.cpp  gui.test.cpp  main.cpp  state_manager.test.cpp  target_manager.test.cpp  tests.cpp  tilemap.test.cpp
